# animefun

./: .gitignore  AGENTS.md  Analyze.md  CLAUDE.md  CODE_REVIEW.md  CONTEXT.md  DOWNLOAD_FEATURE_PLAN.md  GEMINI.md  LICENSE  README.md  bangumi_review.md  code_review_report.md  eslint.config.cjs  generate_icon.sh  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: repo-tokens.yml  tauri-build.yml
.trae/documents/: bangumi_api.md
.trae/rules/: project_rules.md
docs/: architecture-backlog.md  pending-optimizations.md
docs/reviews/: bangumi_search_review.md
docs/specs/: mikan_service.md
public/: calendar.json
scripts/: updater.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bangumi.rs  cache.rs  error.rs  lib.rs  main.rs  subscriptions.rs
src-tauri/src/commands/: bangumi.rs  cache.rs  calendar.rs  download.rs  downloader.rs  episodes.rs  mikan.rs  mod.rs  profile.rs  search.rs  subject.rs  subscriptions.rs  user_profile.rs
src-tauri/src/infra/: cache.rs  config.rs  db.rs  http.rs  log.rs  media_cache.rs  mod.rs  notification.rs  path.rs  tasks.rs  time.rs
src-tauri/src/models/: bangumi.rs  download.rs  mikan.rs  mod.rs  profile.rs  user_profile.rs
src-tauri/src/services/: bangumi_service.rs  mod.rs  parser.rs  subscriptions_service.rs  user_profile.rs
src-tauri/src/services/bangumi/: api.rs  mod.rs  status.rs
src-tauri/src/services/bangumi_service/: api.rs  client.rs  mod.rs  status.rs
src-tauri/src/services/downloader/: client.rs  config.rs  lifecycle.rs  manager.rs  mod.rs  monitor.rs  projection.rs  repo.rs  service.rs
src-tauri/src/services/mikan/: map_store.rs  mod.rs  preheat.rs  resolver.rs  rss.rs  search.rs  util.rs
src-tauri/src/services/mikan_service/: bangumi_page.rs  map_store.rs  mod.rs  preheat.rs  resolver.rs  rss.rs  search.rs  util.rs
src-tauri/src/services/profile/: mod.rs  service.rs
src-tauri/src/services/subscriptions/: index_repo.rs  mod.rs  query.rs  repo.rs  status.rs  store.rs  worker.rs
src-tauri/src/subscriptions/: index_repo.rs  mod.rs  repo.rs  status.rs  store.rs  worker.rs
src-tauri/src/utils/: mod.rs  parser.rs  string.rs
src-tauri/tests/: downloader_config.rs  downloader_integration.rs
src/components/: AnimeCard.tsx  AnimeGrid.tsx  AnimeGridSkeleton.tsx  AnimeInfoBox.tsx  AutoComplete.tsx  DownloadCard.tsx  EpisodeCard.tsx  EpisodesList.tsx  ErrorBoundary.tsx  FiltersPanel.tsx  Layout.tsx  PageHeader.tsx  PaginationBar.tsx  ProfileEditDialog.tsx  ResourceDialog.tsx  ResourceDrawer.tsx  ResourceGroupList.tsx  Sidebar.tsx  SubscribeButton.tsx  UpdateDialog.tsx  UserProfileDialog.tsx  WeekDayNav.tsx
src/constants/: routes.ts
src/hooks/: use-anime-detail.ts  use-cached-image.ts  use-calendar.ts  use-connection-state.tsx  (+19 more)
(+25 files in other folders)
