[package]
name = "animefun"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "animefun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
    "gzip",
    "deflate",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.17"
rusqlite = { version = "0.37", features = ["bundled"] }
once_cell = "1.21"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ts-rs = "11.1"
scraper = "0.18"
rss = "2.0"
regex = "1"
deadpool-sqlite = { version = "0.12", features = ["rt_tokio_1"] }
governor = "0.10"
